# AIRA

./: .gitignore  Cargo.toml  README.md  build.rs  config.yml
src/: constants.rs  crypto.rs  discovery.rs  identity.rs  key_value_table.rs  main.rs  protocol.rs  session_manager.rs  ui_interface.rs  utils.rs
src/frontend/: index.css  index.html  index.js  login.html  logout.html
src/frontend/commons/: script.js  style.css
src/session_manager/: mod.rs  protocol.rs  session.rs
